fixed the fonts

--- a/src/app/components/navbar/Navbar.module.scss
+++ b/src/app/components/navbar/Navbar.module.scss
@@ -7,7 +7,7 @@
   background-color: $white;
 
   .company-name {
-    font-family: 'Bebas Neue', cursive;
+    font-family: "Bebas Neue", '__Bebas_Neue_8c8ae6';
     font-size: 40px;
     color: $black;
   }
