--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue:wght@400;500;600;700;800&display=swap');
 
 * {
   box-sizing: border-box;
@@ -8,7 +7,7 @@
 
 html,
 body {
-  font-family: sans-serif;
+  font-family: 'Inter', sans-serif;
   max-width: 100vw;
   overflow-x: hidden;
   margin: 0;
